# monero

./: .clang-format  CMakeLists.txt
.github/workflows/: build.yml
src/: CMakeLists.txt  cryptonote_config.h
src/common/: base32.cpp  base32.h  timings.cc  timings.h
src/crypto/: CMakeLists.txt  blake2b.c  blake2b.h  blowfish.c  blowfish.h  crypto-ops.c  crypto-ops.h  crypto.h  generators.cpp  generators.h  generic-ops.h  hash.h  oaes_lib.c  oaes_lib.h  siphash.c  siphash.h  tiny_aes.c  tiny_aes.h
src/cryptonote_basic/: subaddress_index.h
src/cryptonote_core/: blockchain.cpp  blockchain.h  cryptonote_core.cpp
src/mock_tx/: CMakeLists.txt  grootle.cpp  grootle.h  grootle_concise.cpp  grootle_concise_temp.cpp  ledger_context.h  mock_ledger_context.cpp  mock_ledger_context.h  mock_rct_base.cpp  mock_rct_base.h  mock_rct_clsag.cpp  mock_rct_clsag.h  mock_rct_components.cpp  mock_rct_components.h  mock_rct_triptych.cpp  mock_rct_triptych.h  mock_rctclsag.cpp  mock_rctclsag.h  mock_rcttriptych.cpp  mock_rcttriptych.h  mock_sp_base.cpp  mock_sp_base.h  mock_sp_base_types.cpp  mock_sp_base_types.h  mock_sp_component_builders.cpp  mock_sp_component_builders.h  mock_sp_component_types.cpp  mock_sp_component_types.h  mock_sp_core.cpp  mock_sp_core.h  mock_sp_core_utils.cpp  mock_sp_core_utils.h  mock_sp_transaction_builder_types.cpp  mock_sp_transaction_builder_types.h  mock_sp_transaction_builders.cpp  mock_sp_transaction_builders.h  mock_sp_transaction_component_types.cpp  mock_sp_transaction_component_types.h  mock_sp_transaction_utils.cpp  mock_sp_transaction_utils.h  (+28 more)
src/multisig/: CMakeLists.txt  account_generator_era.h  dual_base_vector_proof.cpp  dual_base_vector_proof.h  multisig_account.cpp  multisig_account.h  multisig_account_era_conversion_msg.cpp  multisig_account_era_conversion_msg.h  multisig_account_kex_impl.cpp  multisig_kex_msg.cpp  multisig_kex_msg.h  multisig_kex_msg_serialization.h  multisig_msg_serialization.h  multisig_signer_set_filter.cpp  multisig_signer_set_filter.h
src/ringct/: CMakeLists.txt  bulletproofs.cc  bulletproofs_plus.cc  bulletproofs_plus.h  multiexp.cc  multiexp.h  rctOps.cpp  rctOps.h  rctSigs.cpp  rctTypes.h  triptych.cc  triptych.h
src/rpc/: core_rpc_server.cpp
src/seraphis/: CMakeLists.txt  bulletproofs_plus2.cpp  bulletproofs_plus2.h  concise_grootle.cpp  concise_grootle.h  grootle.cpp  grootle.h  jamtis_address_tag_utils.cpp  jamtis_address_tag_utils.h  jamtis_address_tags.cpp  jamtis_address_tags.h  jamtis_address_utils.cpp  jamtis_address_utils.h  jamtis_core_utils.cpp  jamtis_core_utils.h  jamtis_destination.cpp  jamtis_destination.h  jamtis_destination_types.cpp  jamtis_destination_types.h  jamtis_enote_utils.cpp  jamtis_enote_utils.h  jamtis_hash_functions.cpp  jamtis_hash_functions.h  jamtis_payment_proposal.cpp  jamtis_payment_proposal.h  jamtis_support_types.cpp  jamtis_support_types.h  ledger_context.h  legacy_core_utils.cpp  legacy_core_utils.h  legacy_enote_types.cpp  legacy_enote_types.h  legacy_enote_utils.cpp  legacy_enote_utils.h  mock_ledger_context.cpp  mock_ledger_context.h  mock_offchain_context.cpp  mock_offchain_context.h  seraphis_config_temp.h  sp_base_types.cpp  (+130 more)
src/seraphis_core/: jamtis_core_utils.cpp  jamtis_core_utils.h  jamtis_payment_proposal.cpp  legacy_enote_types.cpp
src/seraphis_crypto/: bulletproofs_plus2.cpp  bulletproofs_plus2.h  grootle.h  sp_legacy_proof_helpers.cpp  sp_legacy_proof_helpers.h
src/seraphis_impl/: serialization_demo_types.h  serialization_demo_utils.cpp  serialization_demo_utils.h
src/seraphis_main/: contextual_enote_record_types.cpp  contextual_enote_record_types.h  enote_record_utils_legacy.cpp  enote_record_utils_legacy.h  tx_builder_types.h  tx_builders_mixed.cpp  tx_builders_mixed.h  tx_component_types.cpp  tx_component_types.h  tx_validators.cpp  tx_validators.h  txtype_coinbase_v1.cpp  txtype_coinbase_v1.h  txtype_squashed_v1.cpp
src/seraphis_mocks/: jamtis_mock_keys.cpp  jamtis_mock_keys.h  make_mock_tx.cpp  make_mock_tx.h  mock_ledger_context.cpp  mock_ledger_context.h  mock_send_receive.cpp  mock_send_receive.h
src/seraphis_wallet/: CMakeLists.txt  address_utils.cpp  address_utils.h  encrypt_file.cpp  encrypt_file.h  encrypted_file.h  jamtis_keys.cpp  jamtis_keys.h  key_container.cpp  key_container.h  legacy_knowledge_proofs.cpp  legacy_knowledge_proofs.h  serialization_types.cpp  serialization_types.h  show_enotes.cpp  show_enotes.h  sp_knowledge_proofs.cpp  sp_knowledge_proofs.h  transaction_history.cpp  transaction_history.h  transaction_utils.cpp  transaction_utils.h
src/serialization/: containers.h
src/wallet/: CMakeLists.txt  wallet2.cpp  wallet2.h  wallet_errors.h
tests/core_tests/: bulletproof_plus.cpp  bulletproofs.cpp  chaingen_main.cpp  multisig.cpp
tests/crypto/: CMakeLists.txt  blowfish.c  crypto-tests.h  crypto.cpp  hash.c  main.cpp  siphash_test.c
tests/data/: t1.keys
tests/functional_tests/: functional_tests_rpc.py
tests/performance_tests/: CMakeLists.txt  balance_check.h  blake2_temp.h  blowfish.h  bulletproof.h  bulletproof_plus.h  check_tx_signature.h  concise_grootle.h  grootle.h  grootle_concise.h  main.cpp  mock_tx.h  multi_tx_test_base.h  multiexp.h  performance_tests.h  pippinger_failure.h  seraphis_tx.h  triptych.h  triptych_proof.h  view_scan.h
tests/unit_tests/: CMakeLists.txt  base32.cpp  bulletproofs_plus2.cpp  concise_grootle.cpp  encrypted_file.cpp  grootle.cpp  json_serialization.cpp  key_container.cpp  mock_tx.cpp  multisig.cpp  ringct.cpp  seraphis.cpp  seraphis_crypto.cpp  seraphis_enote_scanning.cpp  seraphis_input_selection.cpp  seraphis_integration.cpp  seraphis_legacy.cpp  seraphis_multisig.cpp  seraphis_serialization.cpp  seraphis_tx.cpp  sp_wallet_legacy_proofs.cpp  sp_wallet_read_write.cpp  sp_wallet_show_enotes.cpp  sp_wallet_tx_history.cpp  (+4 more)
(+3 files in other folders)
